# pxs3c

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  DEPLOY.md  Dockerfile.android  Makefile  QUICK_BUILD.md  README.md  README_RPCS3.md  README_old.md  STATUS.md  build-android.sh  cmake_install.cmake  pxs3c_smoke
.github/workflows/: android-build.yml  linux-build.yml
android/: build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/pxs3c/: AdvancedSettingsActivity.kt  BaseActivity.kt  FilePickerActivity.kt  MainActivity.kt  SettingsActivity.kt
android/app/src/main/res/layout/: activity_advanced_settings.xml  activity_file_picker.xml  activity_main.xml  activity_settings.xml  item_game.xml
android/app/src/main/res/values/: strings.xml
docs/: ANDROID.md  ARCHITECTURE.md  BUILD_ANDROID.md  COMPLETION_SUMMARY.md  CPU_EMULATION.md  INTEGRATION.md  LICENSING.md  RPCS3_INTEGRATION.md  SETTINGS.md  USAGE.md
include/cpu/: SPURecompilerSVE2.h
include/rpcs3/Cell/: PPUThread.h
include/rpcs3/Cell/lv2/: sys_process.h
include/rsx/: VulkanRendererAdreno.h
src/android/jni/: pxs3c_jni.cpp
src/core/: Config.cpp  Config.h  Emulator.cpp  Emulator.h  FramePacer.cpp  FramePacer.h  SyscallHandler.cpp  SyscallHandler.h
src/cpu/: Engine.h  LLVMJITCompiler.cpp  LLVMJITCompiler.h  PPU.h  PPUInterpreter.cpp  PPUInterpreter.h  PPUJIT.cpp  PPUJIT.h  SPU.h  SPUInterpreter.cpp  SPUInterpreter.h  SPUManager.cpp  SPUManager.h  SPURecompilerSVE2.cpp
src/cpu/engines/: Rpcs3Bridge.cpp  Rpcs3Bridge.h
src/loader/: ElfLoader.cpp  ElfLoader.h  SELFLoader.cpp  SELFLoader.h
src/memory/: MemoryManager.cpp  MemoryManager.h
src/rsx/: RSXCommands.cpp  RSXCommands.h  RSXProcessor.cpp  RSXProcessor.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRendererAdreno.cpp
tests/: smoke.cpp
